unpackaged/main/default/objects/Org_Limit__c/Org_Limit__c.object-meta.xml
<CustomObject>
    <label>Org Limit</label>
    <nameField>
        <displayFormat>OL{0000000000}</displayFormat>
        <label>Org Limits Entry Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>