unpackaged/main/default/objects/Org_Limit__c/fields/HourlyPublishedPlatformEvents_Left__c.field-meta.xml
<CustomField>
    <fullName>HourlyPublishedPlatformEvents_Left__c</fullName>
    <formula>HourlyPublishedPlatformEvents_Limit__c - HourlyPublishedPlatformEvents_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HourlyPublishedPlatformEvents: Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>