unpackaged/main/default/objects/Org_Limit__c/fields/HourlyPublishedPlatformEvents_Limit__c.field-meta.xml
<CustomField>
    <fullName>HourlyPublishedPlatformEvents_Limit__c</fullName>
    <label>HourlyPublishedPlatformEvents: Allotment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>