unpackaged/main/default/objects/Org_Limit__c/fields/HrlyPublishedStdVolPEs_Left__c.field-meta.xml
<CustomField>
    <fullName>HrlyPublishedStdVolPEs_Left__c</fullName>
    <formula>HrlyPublishedStdVolPEs_Limit__c - HrlyPublishedStdVolPEs_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HrlyPublishedStdVolPEs: Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>