unpackaged/main/default/objects/Org_Limit__c/fields/HrlyPublishedStdVolPEs_Used__c.field-meta.xml
<CustomField>
    <fullName>HrlyPublishedStdVolPEs_Used__c</fullName>
    <label>HrlyPublishedStdVolPEs: Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>