unpackaged/main/default/objects/Org_Limit__c/fields/MonthlyPlatformEvents_Left__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPlatformEvents_Left__c</fullName>
    <formula>MonthlyPlatformEvents_Limit__c - MonthlyPlatformEvents_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MonthlyPlatformEvents: Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>