unpackaged/main/default/objects/Org_Limit__c/fields/Ran_time__c.field-meta.xml
<CustomField>
    <fullName>Ran_time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ran time</label>
    <type>DateTime</type>
</CustomField>