unpackaged/main/default/objects/Org_Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HourlyPublishedPlatformEvents_Limit__c</columns>
    <columns>HourlyPublishedPlatformEvents_Used__c</columns>
    <columns>HourlyPublishedPlatformEvents_Left__c</columns>
    <columns>HrlyPublishedStdVolPEs_Limit__c</columns>
    <columns>HrlyPublishedStdVolPEs_Used__c</columns>
    <columns>HrlyPublishedStdVolPEs_Left__c</columns>
    <columns>MonthlyPlatformEvents_Limit__c</columns>
    <columns>MonthlyPlatformEvents_Used__c</columns>
    <columns>MonthlyPlatformEvents_Left__c</columns>
    <columns>Ran_time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/20/2022 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>